--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,40 +6,98 @@
 
 body {
     font-family: 'Times New Roman', Times, serif;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
+    font-size: 16px; /* Base size for rem units */
 }
 
 .fullScreen {
     height: 100vh;
     width: 100vw;
-    padding: 10px 10px 10px 10px;
+    padding: 1rem; /* 10px equivalent */
 }
 
 .headContent {
     height: 20vh;
-    border: 3px solid lightgray;
-    border-radius: 10px 30px;
+    border: 0.2rem solid lightgray;
+    border-radius: 1rem 2rem;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .headContent #img01 {
     height: 20vh;
     width: 25vw;
-    padding: 13px;
+    padding: 1rem;
 }
 
 .headContent .nameAndAddress {
     height: 20vh;
     width: 70vw;
-    padding: 13px;
-    display: inherit;
+    padding: 1rem;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-#phoneAndEmail {
-    font-size: 18px;
+#phoneAndEmail, address {
+    font-size: 1.25rem; /* Around 20px */
+}
+
+/* Media Query for tablets and smaller screens */
+@media (max-width: 768px) {
+    body {
+        font-size: 14px;
+    }
+
+    .headContent {
+        flex-direction: column; /* Stack items vertically */
+        height: auto; /* Allow dynamic height */
+    }
+
+    .headContent #img01 {
+        height: 15vh;
+        width: 40vw;
+    }
+
+    .headContent .nameAndAddress {
+        width: 100vw;
+        padding: 0.5rem;
+    }
+
+    #phoneAndEmail, address {
+        font-size: 1.1rem; /* Slightly smaller font */
+    }
+}
+
+/* Media Query for mobile devices */
+@media (max-width: 480px) {
+    body {
+        font-size: 12px;
+    }
+
+    .headContent {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .headContent #img01 {
+        height: 12vh;
+        width: 50vw;
+    }
+
+    .headContent .nameAndAddress {
+        width: 90vw;
+        padding: 0.5rem;
+    }
+
+    #phoneAndEmail, address {
+        font-size: 1rem; /* Further reduced font size */
+    }
+
+    .fullScreen {
+        padding: 0.5rem; /* Less padding for smaller screens */
+    }
 }
